Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-12809

Bad column type created for TEXT(1431655798) CHARACTER SET utf8

    XMLWordPrintable

Details

    Description

      CREATE OR REPLACE TABLE t1 (a TEXT(1431655798) CHARACTER SET utf8);
      SHOW CREATE TABLE t1;
      

      +-------+-----------------------------------------------------------------------------------------------------------+
      | Table | Create Table                                                                                              |
      +-------+-----------------------------------------------------------------------------------------------------------+
      | t1    | CREATE TABLE `t1` (
        `a` tinytext CHARACTER SET utf8 DEFAULT NULL
      ) ENGINE=InnoDB DEFAULT CHARSET=latin1 |
      +-------+-----------------------------------------------------------------------------------------------------------+
      

      Notice, it created a TINYTEXT column.
      The expected type is LONGTEXT.

      Attachments

        Issue Links

          Activity

            People

              bar Alexander Barkov
              bar Alexander Barkov
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.