MDEV-12809 Bad column type created for TEXT(1431655798) CHARACTER SET utf8